k8s/infrastructure/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: airbnb
